--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
     "react-native-uuid": "^2.0.1",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "typescript": "^5.1.3",
+    "@types/react": "~18.2.14"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
