--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
+    "@react-navigation/stack": "^6.3.20",
+    "@types/react": "~18.2.14",
     "expo": "~49.0.15",
+    "expo-font": "~11.4.0",
     "expo-status-bar": "~1.6.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
@@ -19,7 +22,7 @@
     "react-native-uuid": "^2.0.1",
     "react-native-web": "~0.19.6",
     "typescript": "^5.1.3",
-    "@types/react": "~18.2.14"
+    "react-native-gesture-handler": "~2.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
