--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-safe-area-context": "^4.8.1",
+    "react-native-screens": "^3.29.0",
     "react-native-uuid": "^2.0.1",
-    "react-native-web": "~0.19.6",
-    "typescript": "^5.1.3",
-    "react-native-gesture-handler": "~2.12.0"
+    "react-native-web": "^0.19.9",
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
