--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/webpack-config": "^19.0.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/stack": "^6.3.20",
+    "@reduxjs/toolkit": "^2.0.1",
     "@types/react": "~18.2.14",
     "expo": "~49.0.15",
     "expo-font": "~11.4.0",
@@ -25,6 +26,7 @@
     "react-native-screens": "^3.29.0",
     "react-native-uuid": "^2.0.1",
     "react-native-web": "^0.19.9",
+    "react-redux": "^9.0.4",
     "typescript": "^5.1.3"
   },
   "devDependencies": {
