--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-native-uuid": "^2.0.1",
     "react-native-web": "^0.19.9",
     "react-redux": "^9.0.4",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "expo-image-picker": "~14.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
