--- a/package.json
+++ b/package.json
@@ -13,22 +13,26 @@
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/stack": "^6.3.20",
     "@reduxjs/toolkit": "^2.0.1",
+    "@tanstack/react-query": "^5.20.2",
     "@types/react": "~18.2.14",
+    "dotenv": "^16.4.2",
     "expo": "~49.0.15",
     "expo-font": "~11.4.0",
+    "expo-image-picker": "~14.3.2",
+    "expo-sqlite": "~11.3.3",
     "expo-status-bar": "~1.6.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
-    "react-native-safe-area-context": "^4.8.1",
-    "react-native-screens": "^3.29.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "react-native-uuid": "^2.0.1",
     "react-native-web": "^0.19.9",
     "react-redux": "^9.0.4",
     "typescript": "^5.1.3",
-    "expo-image-picker": "~14.3.2"
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
